@@ -1,0 +1,21 @@
+    </ul>
+    <p>
+      <a name="end"><b>Datum der letzten Nachricht:</b></a> 
+       <i>%(lastdate)s</i><br>
+    <b>Archiviert in:</b> <i>%(archivedate)s</i>
+    <p>
+   <ul>
+         <li> <b>Nachrichten sortiert nach:</b>
+	        %(thread_ref)s
+		%(subject_ref)s
+		%(author_ref)s
+		%(date_ref)s
+	     <li><b><a href="%(listinfo)s">Weitere Informationen über diese Liste ...
+                    </a></b></li>
+     </ul>
+     <p>
+     <hr>
+     <i>Dieses Archiv wurde mit
+     Pipermail %(version)s erzeugt.</i>
+  </BODY>
+</HTML>
