@@ -1,0 +1,4 @@
+	<table border=3>
+          <tr><td>Archiv</td>
+          <td>Ansehen nach:</td>
+          <td>Herunterladbare Version</td></tr>
