@@ -1,0 +1,12 @@
+
+	    <tr>
+            <td>%(archivelabel)s:</td>
+            <td>
+              <A href="%(archive)s/thread.html">[ Diskussionsfaden ]</a>
+              <A href="%(archive)s/subject.html">[ Betreff ]</a>
+              <A href="%(archive)s/author.html">[ Autor ]</a>
+              <A href="%(archive)s/date.html">[ Datum ]</a>
+            </td>
+            %(textlink)s
+            </tr>
+
