@@ -1,0 +1,13 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML>
+  <HEAD>
+     <title>Das %(listname)s Archiv</title>
+     <META NAME="robots" CONTENT="noindex,follow">
+  </HEAD>
+  <BODY BGCOLOR="#ffffff">
+     <h1>Das %(listname)s Archiv </h1>
+     <p>
+      Bisher sind noch keine Nachrichten an diese Liste geschickt worde. Daher ist das Archiv noch leer. Über diese Liste <a href="%(listinfo)s">gibt es weitere Informationen</a>.
+     </p>
+  </BODY>
+  </HTML>
